添加使用文档及一些商用的常用

--- a/src/base.scss
+++ b/src/base.scss
@@ -13,6 +13,7 @@ html, body{
     height: 100%;
     box-sizing: border-box;
     background-color: #fff;
+    position: relative;
 }
 
 $inputColor: rgb(153, 153, 153);
