--- a/src/components/UploadButton/uploadButton.scss
+++ b/src/components/UploadButton/uploadButton.scss
@@ -1,46 +1,55 @@
 $btnColor: #4f94fa;
 $btnFontSize: 14px;
 $btnHeight: 30px;
-.btn-upload{
-    position: relative;
-    text-decoration: none;
-    cursor: pointer;
-    display: inline-block;
-    min-width: 4em;
-    padding: 0 1em;
-    height: $btnHeight;
-    line-height: $btnHeight;
-    text-align: center;
-    vertical-align: top;
-    border: none;
-    outline: none;
-    background: none;
+.btn-upload {
+  display: inline-block;
+
+  position: relative;
+
+  border: 1px solid $btnColor;
+  border-radius: 3px;
+  padding: 0 1em;
+  min-width: 4em;
+  height: $btnHeight;
+
+  font-size: $btnFontSize;
+  line-height: $btnHeight;
+  text-align: center;
+  vertical-align: top;
+  text-decoration: none;
+
+  color: #fff;
+  background: none;
+  background-color: $btnColor;
+
+  outline: none;
+
+  cursor: pointer;
+  &:hover {
+    border-color: transparentize($btnColor, 0.15);
+
     color: #fff;
-    background-color: $btnColor;
-    border-radius: 3px;
-    padding: 0 1em;
+    background-color: transparentize($btnColor, 0.15);
+
     cursor: pointer;
-    font-size: $btnFontSize;
-    box-sizing: border-box;
+  }
+  &.disabled {
+    border-color: transparentize($btnColor, 0.5);
 
-    &:hover {
-        background-color: transparentize($btnColor, 0.15);
-        color: #fff;
-        cursor: pointer;
-    }
-    &.disabled {
-        background-color: transparentize($btnColor, 0.5);
-        cursor: default;
-    }
-    
+    background-color: transparentize($btnColor, 0.5);
 
-    >input {
-        opacity: 0;
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        bottom: 0;
-        cursor: pointer;
-    }
+    cursor: default;
+  }
+  >input {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+
+    width: 100%;
+
+    opacity: 0;
+
+    cursor: pointer;
+  }
 }
