--- a/src/views/uploadList/uploadList.scss
+++ b/src/views/uploadList/uploadList.scss
@@ -4,174 +4,186 @@ $searchBtnWid: 4em;
 $borderRadius: 3px;
 $fontSize: 14px;
 
-.inlineVisible {
-	display: inline-block;
-}
-.visible{
-	display: block;
-}
-.invisible{
-	display: none;
-}
+#uploadList {
+  .inlineVisible {
+    display: inline-block;
+  }
+  .visible {
+    display: block;
+  }
+  .invisible {
+    display: none;
+  }
+  .btn-group {
+    margin-bottom: 15px;
+    border-bottom: 1px solid #eee;
+    padding-bottom: 15px;
+    >.btn {
+      margin-right: 5px;
+    }
+    input[type=text] {
+      display: inline-block;
 
-.btn-group{
-	padding-bottom: 15px;
-	border-bottom: 1px solid #eee;
-	margin-bottom: 15px;
+      box-sizing: border-box;
+      border: 1px solid #eee;
+      border-radius: $borderRadius;
+      padding: 0.5ex 0.5em;
+      min-width: $inputMinWidth;
+      height: $inputHeight;
 
-	>.btn{
-		margin-right: 5px;
-	}
+      font-size: $fontSize;
+      &:focus {
+        border-color: #66afe9;
 
-	input[type=text]{
-		box-sizing: border-box;
-		display: inline-block;
-		min-width: $inputMinWidth;
-		height: $inputHeight;
-		padding: .5ex .5em;
-		border: 1px solid #eee;
-		font-size: $fontSize;
-		border-radius: $borderRadius;
-
-		&:focus{
-			border-color: #66afe9;
-			outline: 0;
-			-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102,175,233,.6);
-			box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102,175,233,.6);
-		}
-	}
-
-	.upload{
-		float: right;
-	}
-}
-
-// $trHeight: 50px;
-.fileList{
-	height: 400px;
+        outline: 0;
+        -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075), 0 0 8px rgba(102,175,233,0.6);
+                box-shadow: inset 0 1px 1px rgba(0,0,0,0.075), 0 0 8px rgba(102,175,233,0.6);
+      }
+    }
+    .speed {
+      padding: 0 15px;
+    }
+    .upload {
+      float: right;
+    }
+  }
+  // $trHeight: 50px;
+  .fileList {
     overflow: auto;
 
-	tbody>tr{
-		border-top: 1px solid #eee;
-		border-bottom: none;
-		box-sizing: border-box;
-
-		&:nth-child(odd){
-			background-color: #f9f9f9;
-		}
-	}
-	td{
-		box-sizing: border-box;
-	}
-
-	td.fileName {
-		width: 30%;
-
-		>span{
-			display: inline-block;
-			width: 100%;
-
-			span{
-				font-size: $fontSize;
-	            width: 100%;
-			}
-			input{
-				width: 100%;
-	            padding: 5px;
-	            border: 1px solid #eee;
-	            border-radius: 5px;
-	            box-sizing: border-box;
-	            font-size: $fontSize;
-			}
-		}
-	} 
-
-	td.description{
-		width: 30%;
-        textarea{
-            padding: 5px 8px;
-            border-radius: 5px;
-            font-size: $fontSize;
-            box-sizing: border-box;
-            width: 100%;
-            color: #555;
-            &:focus{
-            	border-color: #66afe9;
-            	outline: 0;
-            	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102,175,233,.6);
-            	box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102,175,233,.6);
-            }
-        }
+    height: 400px;
+    tbody>tr {
+      box-sizing: border-box;
+      border-top: 1px solid #eee;
+      border-bottom: none;
+      &:nth-child(odd) {
+        background-color: #f9f9f9;
+      }
     }
-
-    td.progress{
-    	width: 30%;
-        p{
-            line-height: 3ex;
-            font-size: $fontSize;
-            text-align: right;
-        }
-        .progressBar-wrap{
-            width: 100%;
-            height: 15px;
-            border-radius: 3px;
-            overflow: hidden;
-            background-color: #f5f5f5;
-            box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
-        }
-        .progressBar{
-            background-color: #5cb85c;
-            width: 0%;
-            height: 100%;
-            border-radius: 3px 0 0 3px;
-            background-image: linear-gradient(45deg,rgba(255,255,255,.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,.15) 50%,rgba(255,255,255,.15) 75%,transparent 75%,transparent);
-            background-size: 40px 40px;
-        }
+    td {
+      box-sizing: border-box;
     }
-    td.deleteBtn{
-    	width: 10%;
-    	text-align: center;
+    td.fileName {
+      width: 30%;
+      .fileTitle {
+        float: left;
+        overflow-x: hidden;
 
-        .button{
-        	float: right;
-            background-color: #d9534f;
+        width: 220px;
 
-            &:hover {
-                background-color: transparentize(#d9534f, 0.1);
-                color: #fff;
-            }
-        }
-        >span{
-        	display: block;
-        	width: 100%;
-        	text-align: right;
-        	color: green;
-        }
+        font-size: $fontSize;
+        text-overflow: ellipsis;
+      }
+      input {
+        box-sizing: border-box;
+        border: 1px solid #eee;
+        border-radius: 5px;
+        padding: 5px;
+        width: 85%;
+
+        font-size: $fontSize;
+      }
     }
-}
+    td.description {
+      width: 30%;
+      textarea {
+        box-sizing: border-box;
+        border-radius: 5px;
+        padding: 5px 8px;
+        width: 100%;
 
-i.fa-pencil {
-	float: right;
-	margin-right: 8px;
-}
-i.fa-check {
-	color: #5cb85c;
-	font-size: 20px;
-}
-i.fa-trash-o {
-	background-color: #ff5b5b;
-    color: #fff;
-    padding: 5px 10px;
+        font-size: $fontSize;
+
+        color: #555;
+        &:focus {
+          border-color: #66afe9;
+
+          outline: 0;
+          -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075), 0 0 8px rgba(102,175,233,0.6);
+                  box-shadow: inset 0 1px 1px rgba(0,0,0,0.075), 0 0 8px rgba(102,175,233,0.6);
+        }
+      }
+    }
+    td.progress {
+      width: 30%;
+      p {
+        font-size: $fontSize;
+        line-height: 3ex;
+        text-align: right;
+      }
+      .progressBar-wrap {
+        overflow: hidden;
+
+        border-radius: 3px;
+        width: 100%;
+        height: 15px;
+
+        background-color: #f5f5f5;
+
+        box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+      }
+      .progressBar {
+        border-radius: 3px 0 0 3px;
+        width: 0;
+        height: 100%;
+
+        background-color: #5cb85c;
+        background-image: linear-gradient(45deg,rgba(255,255,255,0.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,0.15) 50%,rgba(255,255,255,0.15) 75%,transparent 75%,transparent);
+        background-size: 40px 40px;
+      }
+    }
+    td.deleteBtn {
+      width: 10%;
+
+      text-align: center;
+      .button {
+        float: right;
+
+        background-color: #d9534f;
+        &:hover {
+          color: #fff;
+          background-color: transparentize(#d9534f, 0.1);
+        }
+      }
+      >span {
+        display: block;
+
+        width: 100%;
+
+        text-align: right;
+
+        color: green;
+      }
+    }
+  }
+  i.fa-pencil {
+    float: left;
+
+    width: 15%;
+
+    text-align: center;
+  }
+  i.fa-check {
+    font-size: 20px;
+
+    color: #5cb85c;
+  }
+  i.fa-trash-o {
     border-radius: 3px;
+    padding: 5px 10px;
 
+    color: #fff;
+    background-color: #ff5b5b;
     &:hover {
-		opacity: .85;
-		cursor: pointer;
-	}
-	&.disabled {
-		opacity: .5;
-		&:hover {
-			cursor: default;
-		}
-	}
+      opacity: 0.85;
+
+      cursor: pointer;
+    }
+    &.disabled {
+      opacity: 0.5;
+      &:hover {
+        cursor: default;
+      }
+    }
+  }
 }
