--- a/src/views/videoList/videoList.scss
+++ b/src/views/videoList/videoList.scss
@@ -1,145 +1,183 @@
 $fontSize: 14px;
 $tableHeight: 410px;
-.search{
-	overflow: auto;
-	padding: 0 0 15px;
-	border-bottom: 1px solid #eee;
-}
-.panel{
-	position: relative;
+#videoList {
+  .search {
+    overflow: auto;
+
+    border-bottom: 1px solid #eee;
+    padding: 0 0 15px;
+  }
+  .panel {
+    position: relative;
+
     margin-top: 10px;
-}
-.loading{
-	display: none;
-	z-index: 9;
-	position: absolute;
-	width: 100%;
-	height: $tableHeight;
-	line-height: $tableHeight;
-	text-align: center;
-	top: 0;
-	left: 0;
-	background-color: #fff;
-}
-.sysInfo {
-	display: none;
-	position: absolute;
-	width: 100%;
-	height: $tableHeight;
-	line-height: $tableHeight;
-	text-align: center;
-	top: 0;
-	left: 0;
-	background-color: #fff;
-	color: gray;
-}
-.listPanel{
-	.tableWrap{
-		height: $tableHeight;
-		overflow: auto;
-		margin-bottom: 10px;
-	}
-	.table thead > tr{
-		border-top: none;
-	}
+  }
+  .loading {
+    display: none;
 
-	tbody .thumbnail>img{
-		width: 100px;
-		height: 60px;
-	}
-	td.title .titleWrap {
-		width: 250px;
-	    display: block;
-	    overflow-x: hidden;
-	    text-overflow: ellipsis;
-	}
-	th.duration, td.duration {
-		width: 120px;
-	}
-	th.status, td.status {
-		width: 120px;
-	}
-	th.ptime, td.ptime {
-		width: 220px;
-	}
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 9;
 
-	#pageControl{
-		text-align: center;
+    width: 100%;
+    height: 100%;
 
-		.button{
-			margin: 0 10px;
-		}
-	}
+    line-height: $tableHeight;
+    text-align: center;
 
-}
+    background-color: #fff;
+  }
+  .videoListSysInfo {
+    display: none;
 
-.infoPanel {
-	padding: 10px 20px;
-	position: relative;
+    position: absolute;
+    top: 0;
+    left: 0;
 
-	section{
-		margin: 15px 0;
-	}
+    width: 100%;
+    height: $tableHeight;
 
-	.btn-wrap{
-		position: absolute;
-		top: 0;
-		right: 0;
-		.button{
-			margin-right: 10px;
-		}
-	}
-	.section_1 {
-		overflow: auto;
+    line-height: $tableHeight;
+    text-align: center;
 
-		.thumbnail{
-			width: 30%;
-		}
+    color: gray;
+    background-color: #fff;
+  }
+  .listPanel {
+    .tableWrap {
+      overflow: auto;
 
-		>div {
-			float: left;
-		}
-	}
-	.thumbnail{
-		>img{
-			max-height: 125px;
-			max-width: 200px;
-			min-width: 125px;
-			margin-right: 50px;
-			padding: 2px;
-			border: 1px solid #ccc;
-		}
-	}
-	.btnGroup{
-		overflow: auto;
-		>.button{
-			float: left;
-			margin-right: 8px;
-		}
-	}
-	dt{
-		font-weight: bold;
-	}
-	dt, dd {
-		display: inline-block;
-		font-size: $fontSize;
-		color: #666;
-		line-height: 1.7em;
-	}
-	.tabs-panel{
-		width: 100%;
-		height: 110px;
-		overflow: auto;
-		img{
-			display: inline-block;
-			width: 15.985%;
-			max-height: 100px;
-			box-sizing: border-box;
-			margin: 3px;
-			padding: 2px;
-			border: 1px solid #ccc;
-			box-sizing: border-box;
-			overflow: auto;
-		}
-	}
+      margin-bottom: 10px;
+      height: $tableHeight;
+    }
+    .table thead>tr {
+      border-top: none;
+    }
+    tbody .thumbnail>img {
+      width: 100px;
+      height: 60px;
+    }
+    td.title .titleWrap {
+      display: block;
+      overflow-x: hidden;
+
+      width: 250px;
+
+      text-overflow: ellipsis;
+    }
+    th.duration,
+    td.duration {
+      width: 120px;
+    }
+    th.status,
+    td.status {
+      width: 120px;
+    }
+    th.ptime,
+    td.ptime {
+      width: 220px;
+    }
+    #pageControl {
+      text-align: center;
+      .button {
+        margin: 0 10px;
+      }
+    }
+  }
+  .infoPanel {
+    position: relative;
+
+    padding: 10px 20px;
+    section {
+      margin: 15px 0;
+    }
+    .btn-wrap {
+      position: absolute;
+      top: 0;
+      right: 0;
+      .button {
+        margin-right: 10px;
+      }
+    }
+    .section_1 {
+      overflow: auto;
+
+      height: 165px;
+      .thumbnail {
+        position: relative;
+
+        width: 30%;
+        height: 165px;
+      }
+      >div {
+        float: left;
+      }
+    }
+    .thumbnail {
+      >img {
+        position: absolute;
+        top: 0;
+        left: 0;
+
+        margin-right: 50px;
+        border: 1px solid #ccc;
+        padding: 2px;
+        width: 200px;
+        height: 125px;
+      }
+    }
+    .btnGroup {
+      overflow: auto;
+
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      >.button {
+        float: left;
+
+        margin-right: 8px;
+      }
+    }
+    .msg {
+      width: 70%;
+    }
+    dt {
+      font-weight: bold;
+    }
+    dt,
+    dd {
+      display: inline-block;
+
+      max-width: 550px;
+
+      font-size: $fontSize;
+      line-height: 1.7em;
+      vertical-align: top;
+      word-wrap: break-word;
+      word-break: normal;
+
+      color: #666;
+    }
+    .tabs-panel {
+      overflow: auto;
+
+      width: 100%;
+      height: 110px;
+      img {
+        display: inline-block;
+        overflow: auto;
+
+        margin: 3px;
+        box-sizing: border-box;
+        box-sizing: border-box;
+        border: 1px solid #ccc;
+        padding: 2px;
+        width: 15.985%;
+        max-height: 100px;
+
+        vertical-align: middle;
+      }
+    }
+  }
 }
